--- a/03.06.24 - שיעור 9/תרגיל 1/1.html
+++ b/03.06.24 - שיעור 9/תרגיל 1/1.html
@@ -4,8 +4,9 @@
 </head>
 <body>
   <div id="first-box">First box</div>
+  <div id="second-box">Second box</div>
+  <div id="third-box">Third box</div>
 
-  <button onclick="clicked()">Start</button>
 
   <script src="1.js"></script>
 </body>
