--- a/03.06.24 - שיעור 9/תרגיל 3/1.html
+++ b/03.06.24 - שיעור 9/תרגיל 3/1.html
@@ -10,11 +10,11 @@
           <button class="reset-button">reset</button>
         </div>
         <div class="second-floor">
-          <div class="hours-div">00</div>
-          <div class="colon-div">:</div>
-          <div class="minutes-div">00</div>
-          <div class="colon-div">:</div>
-          <div class="seconds-div">00</div>
+          <div class="hours-div running-color">00</div>
+          <div class="colon-div running-color">:</div>
+          <div class="minutes-div running-color">00</div>
+          <div class="colon-div running-color">:</div>
+          <div class="seconds-div running-color">00</div>
         </div>
         <div class="third-floor">
           <button class="start-stop-buttons start-button">start</button>
