--- a/05.06.24 - שיעור 11/תרגיל 4/1.html
+++ b/05.06.24 - שיעור 11/תרגיל 4/1.html
@@ -3,6 +3,7 @@
   <link rel="stylesheet" href="./style.css" />
 </head>
 <body>
-
+  <form action="submit">sd</form>
+  <button>Submit</button>
   <script src="1.js"></script>
 </body>
