--- a/שיעור 12 - 24.06.06/תרגיל 1/1.html
+++ b/שיעור 12 - 24.06.06/תרגיל 1/1.html
@@ -4,7 +4,7 @@
 </head>
 <body>
   <label for="nameInput" >Give me a name: </label>
-  <input id="nameInput" type="text" placeholder="Bret">
+  <input id="nameInput" type="text" placeholder="Like: Bret">
   <button id="submitNameButton">Submit</button>
   <script src="1.js"></script>
 </body>
