--- a/שיעור 12 - 24.06.06/תרגיל 2/1.html
+++ b/שיעור 12 - 24.06.06/תרגיל 2/1.html
@@ -3,6 +3,8 @@
   <link rel="stylesheet" href="./style.css" />
 </head>
 <body>
-
+  <label for="nameInput" >Give me a name: </label>
+  <input id="nameInput" type="text" placeholder="Like: Bret">
+  <button id="submitNameButton">Submit</button>
   <script src="1.js"></script>
 </body>
